--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -20,9 +20,10 @@
         <item name="android:colorEdgeEffect">@color/conversation_edge_effect</item>
     </style>
 
-    <style name="BugleTheme.DialogActivity" parent="@style/Theme.AppCompat.Light.Dialog">
+    <style name="BugleTheme.DialogActivity" parent="@style/Theme.AppCompat.DayNight.Dialog">
         <item name="android:windowNoTitle">false</item>
-        <item name="android:background">@android:color/white</item>
+        <item name="android:background">@color/window_background</item>
+        <item name="android:dialogCornerRadius">28dp</item>
     </style>
 
     <style name="ContactListItemDrawableIndicator">
