--- a/res/layout/compose_message_view.xml
+++ b/res/layout/compose_message_view.xml
@@ -87,7 +87,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:baselineAligned="false">
 
             <!-- Contains compose message bubble and character counter for SMS or attachments size
                  for MMS which should be left aligned -->
