--- a/res/layout/contact_list_item_view.xml
+++ b/res/layout/contact_list_item_view.xml
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/contact_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingBottom="4dp"
