Messaging: Style the SwitchPreferences
Use the newer style of A15

Change-Id: I75a0e54f70f837d21d3aaa746f2e0ec7af226eda

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -644,4 +644,13 @@
         <item name="android:background">@color/window_background</item>
         <item name="dialogCornerRadius">28dp</item>
     </style>
+
+    <style name="AppPreferenceThemeOverlay" parent="@style/PreferenceThemeOverlay">
+        <item name="switchPreferenceCompatStyle">@style/AppSwitchPreference</item>
+    </style>
+
+    <style name="AppSwitchPreference" parent="@style/Preference.SwitchPreferenceCompat.Material">
+        <item name="widgetLayout">@layout/preference_material_switch</item>
+    </style>
+
 </resources>
